examples/headless/envoy/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  clusterIP: None # for headless service
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: myapp
