examples/headless/envoy/my-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  labels:
    app: myapp
spec:
  replicas: 5
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: appmyapp
        image: djkormo/php-hello
        imagePullPolicy: Always
        env:
          - name: "VERSION"
            value: "1.0"
        ports:
        - containerPort: 80
